# CodestralCompanion

./: .gitignore  BUILD.md  INSTALL.md  PROJECT_SUMMARY.md  README.md  build-deb.sh  index.html  package-lock.json  package.json  tailwind.config.js
--name/: package.json
--name/src-tauri/: tauri.conf.json
src/: App.css  App.tsx  index.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/deb/: postinst  prerm
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  auth.rs  chat.rs  chat_storage.rs  cli.rs  commands.rs  conversations.rs  differ.rs  indexer.rs  lib.rs  main.rs  mistral_client.rs  models.rs  persistent_index.rs  tray.rs
src-tauri/src/tui/: app.rs  logo.rs  mcp.rs  mod.rs  runner.rs  tools.rs  ui.rs
src/components/: ChatWindow.tsx  ConversationSelector.tsx  MarkdownRenderer.tsx  SettingsModal.tsx
src/components/Chat/: ChatWindow.tsx  MessageInput.tsx
src/components/Layout/: Sidebar.tsx  WindowControls.tsx
src/components/Settings/: SettingsModal.tsx
src/stores/: useChatStore.ts
