[package]
name = "companion-chat"
version = "0.1.0"
description = "Ubuntu System Tray Chat Application with Mistral Codestral Integration"
authors = ["rony"]
edition = "2021"

[lib]
name = "companion_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
dirs = "5.0"
base64 = "0.22"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }

# CLI Agent dependencies
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
similar = "2"
colored = "2"
indicatif = "0.17"
walkdir = "2"
regex = "1"
crossterm = "0.27"
ratatui = "0.28"
tui-textarea = "0.6"
